--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@crxjs/vite-plugin": "^2.3.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/chrome": "^0.1.36",
+    "@types/node": "^25.1.0",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
